# games101-assignment

./: README.md
Assignment1/CodeFramework/: CMakeLists.txt  main.cpp
Assignment2/CodeFramework/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  OBJ_Loader.h  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/code/: main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
PA6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Renderer.cpp  Sphere.hpp  Triangle.hpp
PA7/Assignment7/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  README.md  Ray.hpp  Scene.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
PA7/Assignment7/images/: Diffuse-SPP16.ppm  Diffuse-SPP512.ppm
assignment8/: README.md
assignment8/src/: application.cpp  rope.cpp
pa0/: CMakeLists.txt  main.cpp
